test/errors/type/str/replace6.yasl
''.replace(.tr, .true, 1)
